@@ -132,5 +132,11 @@ public class PigConfiguration {
      * This key is used to define whether to delete intermediate files of Hadoop jobs.
      */
     public static final String PIG_DELETE_TEMP_FILE = "pig.delete.temp.files";
+
+    /**
+      * This key used to control the maximum size loaded into
+      * the distributed cache when doing fragment-replicated join
+      */
+    public static final String PIG_JOIN_REPLICATED_MAX_BYTES = "pig.join.replicated.max.bytes";
 }
 
